[Modernize Code] Removed deprecated Integer constructor usage